# NewRoboCup

./: .gitignore  CMakeCache.txt.prev  README.md  ejecutar.sh  ejecutar2.sh  funciones.h  main.cpp  player
.cmake/api/v1/reply/: cache-v2-66910055e1dad01e892d.json  cache-v2-7f45d20d472d98983334.json  cmakeFiles-v1-1016095f1b1f2c1cacfa.json  cmakeFiles-v1-31de149e3e0f4b60e3e9.json  codemodel-v2-3418ecb19908fd9627f5.json  codemodel-v2-7dd0a35d5665d0df3cac.json  directory-_deps.min_sock-build-cc4e49e6cfa392a729ff.json  directory-_deps.min_sock-build.src-a0ad3f7b35030d81dd76.json  index-2024-05-06T11-04-03-0851.json  index-2024-05-06T11-56-20-0744.json  target-MinimalSocket-36205bccfd5d1cecd2a5.json  target-MinimalSocket-a0c62e78a02d3d238f06.json  target-player-41448870c8ef6aa6b330.json  target-player-928168ec1ade6eb059f1.json
.qtc_clangd/.cache/clangd/index/: Address.cpp.F2F8EEF4BA6BEEA5.idx  Address.h.383CAF1943A1BE1A.idx  Definitions.cpp.C27B4520CF110E52.idx  Definitions.h.F3413F36A528FE37.idx  Error.cpp.8A1E68C8B35FD365.idx  Error.h.1C2DC133A3708115.idx  NonCopiable.h.E210BF0B2A327CD4.idx  Receiver.cpp.1F543D4DAB0A1767.idx  Receiver.h.B009F02D944C8906.idx  Sender.cpp.152E53BDAD9F62ED.idx  Sender.h.BB135F79864E8F7D.idx  Socket.cpp.57CC054D635E5272.idx  Socket.h.0170DBA63FA98640.idx  SocketAddress.cpp.5C3441D8D7C8818C.idx  SocketAddress.h.71318761E1AE6071.idx  SocketContext.cpp.AFCAF9A0B07525EC.idx  SocketContext.h.C8973212D1E2200B.idx  SocketFunctions.cpp.99E00FE2BC913D09.idx  SocketFunctions.h.9E5DD5290B1100F5.idx  (+174 more)
tests/: CMakeLists.txt  funciones_test.cpp
